--- a/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.scss
+++ b/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.scss
@@ -75,6 +75,25 @@ select,
     display: flex;
 }
 
+::ng-deep .select2-container {
+    width: 100% !important;
+}
+
+::ng-deep .select2-container .select2-selection--single {
+    height: 50px !important;
+    // margin-top: 1%;
+    width: 100% !important;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 13px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 13px;
+
+}
+
 @media screen and (max-width:560px) {
     .display {
         display: block;
