--- a/src/app/admin/features/special_role/Dialogue/adsdialogue/adsdialogue.component.html
+++ b/src/app/admin/features/special_role/Dialogue/adsdialogue/adsdialogue.component.html
@@ -30,20 +30,34 @@
                 <div class="col-12 col-md-1 mobile">
                     <span class="me-2">:</span>
                 </div>
-                <div class="col-12 col-md-8">
-                    <textarea [(ngModel)]="addurl" name="addurl" placeholder="Enter ADD URL" required #urlRef="ngModel"
+                <!-- <div class="col-12 col-md-8">
+                    <textarea [(ngModel)]="addurl"  name="addurl" placeholder="Enter ADD URL" required #urlRef="ngModel"
                         pattern="http:\/\/\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}:\d+\/udp\/\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}:\d+"></textarea>
                     <div *ngIf="urlRef.invalid && urlRef.touched" class="text-danger">
                         <div *ngIf="urlRef.errors?.['required']">ADD URL is required.</div>
                         <div *ngIf="urlRef.errors?.['pattern']">
-                            Please enter a valid URL <br> (e.g., http://192.168.50.36:1012 <br>
-                            /udp/239.239.239.118:1235).
+                            Please enter a valid URL <br> (e.g., http://192.168.50.36:1012
+                            <br>/udp/239.239.239.118:1235).
+                        </div>
+                    </div>
+                </div> -->
+
+                <div class="col-12 col-md-8">
+                    <textarea [(ngModel)]="addurl" name="addurl" placeholder="Enter ADD URL" required #urlRef="ngModel"
+                        (ngModelChange)="validateUrl()"></textarea>
+
+                    <div *ngIf="urlError && urlRef.touched" class="text-danger">
+                        <div *ngIf="urlError === 'required'">ADD URL is required.</div>
+                        <div *ngIf="urlError === 'pattern'">
+                            Please enter a valid URL <br> (e.g., http://192.168.50.36:1012
+                            <br>/udp/239.239.239.118:1235).
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- Site URL -->
-            <div class="input_box display align-items-center mb-3">
+            <!-- <div class="input_box display align-items-center mb-3">
                 <div class="col-12 col-md-3">
                     <label class="me-2">SITE URL</label>
                 </div>
@@ -59,7 +73,28 @@
                             https://www.example.com).</div>
                     </div>
                 </div>
+            </div> -->
+
+            <div class="input_box display align-items-center mb-3">
+                <div class="col-12 col-md-3">
+                    <label class="me-2">SITE URL</label>
+                </div>
+                <div class="col-12 col-md-1 mobile">
+                    <span class="me-2">:</span>
+                </div>
+                <div class="col-12 col-md-8">
+                    <textarea [(ngModel)]="siteurl" name="siteurl" placeholder="Enter URL" required
+                        #siteUrlRef="ngModel" (ngModelChange)="validateSiteUrl()"></textarea>
+            
+                    <div *ngIf="siteUrlError && siteUrlRef.touched" class="text-danger">
+                        <div *ngIf="siteUrlError === 'required'">SITE URL is required.</div>
+                        <div *ngIf="siteUrlError === 'pattern'">
+                            Please enter a valid URL (e.g., http://www.example.com or https://www.example.in).
+                        </div>
+                    </div>
+                </div>
             </div>
+            
 
             <!-- CAS ID -->
 
