--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             <br>
             <form class="login-form" [formGroup]="signInform" (ngSubmit)="submit(signInform)">
                 <div class="sign-in-htm">
-                    <mat-form-field class="example-full-width w-100 " appearance="outline">
+                    <mat-form-field class="example-full-width w-100 mb-3 " appearance="outline">
                         <mat-label class="input">Username</mat-label>
                         <input matInput id="user" formControlName="username" placeholder="Username"
                             style="font-size: medium;">
@@ -15,7 +15,7 @@
                             <i class="fa-solid fa-user" style="color: #1f6764;"></i>
                         </span>
                     </mat-form-field>
-                    <mat-form-field class="example-full-width w-100 " appearance="outline">
+                    <mat-form-field class="example-full-width w-100 mb-3" appearance="outline">
                         <mat-label>Password</mat-label>
                         <input matInput id="password" [type]="isShow?'text':'password'" formControlName="password"
                             placeholder="Password">
@@ -27,22 +27,28 @@
                     <div class="group">
                         <input type="submit" class="button" value="Sign In">
                     </div>
-                    <div class="foot-lnk">
-                        <h6 style="color:#1f6764">Version 7.2.2</h6>
-                    </div>
+
                     <div class="mb-2" *ngIf="!notificationMessage" style="position: relative;">
+                        <br/>
                         <div class="d-flex justify-content-center">
-                            <label style="color:#021616;font-weight: 600;">{{warningMessage}} </label>
+                            <label style="color:#021616;font-weight: 600;font-size: small;">{{warningMessage}} </label>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <label style="color:#c10528;">{{warningMessageDate}} </label>
+                            <label style="color:#c10528;font-weight: 600;font-size: small">{{warningMessageDate}} </label>
                         </div>
                     </div>
                 </div>
             </form>
-            <h6 style="color:#525252;text-align: center;margin-bottom: -4%;font-size: 15px;">Powered by</h6>
-            <div class="d-flex justify-content-center">
-                <img style="height: 80px;" src="/assets/images/login/Rid_logo.png">
+            <div class="d-flex justify-content-between align-item-center">
+                <div class="foot-lnk">
+                    <p style="color:#1f6764;font-size: small;font-weight: bold;">Version 7.2.2</p>
+                </div>
+                <div>
+                    <p style="color:#525252;text-align: center;margin-bottom: -4%;font-size: x-small;">Powered by</p>
+                    <div class="d-flex justify-content-center">
+                        <img style="height: 60px;" src="/assets/images/login/Rid_logo.png">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
