--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -33,22 +33,25 @@ a {
 
 .login-html {
 	position: absolute;
-	border-radius: 20px;
+	border-radius: 5px;
 	bottom: 0px;
 	// padding: 35px;
-	padding: 40px 20px 0px 20px;
+	padding: 40px 30px 0px 30px;
 	background-color: white;
 }
 
 .login-form {
-	min-height: 345px;
+	min-height: 34vh;
 	position: relative;
 	perspective: 1000px;
 	transform-style: preserve-3d;
+	max-width: 350px;
 }
 
 .login-form .group {
-	margin: 16px 2px;
+	// margin: 16px 2px;
+	margin: auto;
+	// width: 300px;
 }
 
 .login-form .group .label,
